--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.13.1
   http: ^1.5.0
-  dropdown_search: ^5.0.6
   geolocator: ^14.0.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
